manifests/strategy-appv2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:  
  labels:
    app: strategy-appv2
  name: strategy-appv2
  namespace: test 
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10 
  selector:
    matchLabels:
      app: strategy-app
      version: v2 
  template:
    metadata: 
      labels:
        app: strategy-app
        version: v2
    spec:      
      containers:
      - image: nginx:1.20
        imagePullPolicy: IfNotPresent 
        name: strategy-appv2    
      dnsPolicy: ClusterFirst
      restartPolicy: Always  
      terminationGracePeriodSeconds: 0
