manifests/strategy-nginx3.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  generation: 1
  labels:
    app: strategy-nginx
  name: strategy-nginx
  namespace: test 
spec:
  progressDeadlineSeconds: 600
  replicas: 5 
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 60%
      maxUnavailable: 60% 
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: strategy-nginx 
  template:
    metadata: 
      labels:
        app: strategy-nginx
    spec:      
      containers:
      - image: nginx:1.28
        imagePullPolicy: IfNotPresent 
        name: strategy-nginx  
      - image: wbitt/network-multitool
        imagePullPolicy: IfNotPresent 
        name: manual-pv-multitool
        ports:
        - containerPort: 1180
          name: http
        - containerPort: 11443
          name: https  
       
      dnsPolicy: ClusterFirst
      restartPolicy: Always  
      terminationGracePeriodSeconds: 0
