manifests/strategy-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: strategyapp
  namespace: test
spec:
  hosts:
    - strategyapp-dest
  http:
  - route:
    - destination:
        host: strategyapp-dest
        subset: v1
      weight: 90
    - destination:
        host: strategyapp-dest
        subset: v2
      weight: 10
